--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "biome check src/",
-    "format": "biome format src/ --write"
+    "format": "biome format src/ --write",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "biome check --write",
+      "biome format --write"
+    ],
+    "scripts/**/*.{mjs,js}": [
+      "biome format --write"
+    ]
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.8",
@@ -33,7 +43,9 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "husky": "^9.1.7",
     "jsdom": "^28.1.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
