feat: add favicon and PWA icons
Ascending bar chart with amber trend line on dark navy background.
SVG-first with PNG fallbacks, apple-touch-icon, and PWA manifest icons.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ PHASES.md
 PROMPT-dashboard-fiscal-espana.md
 *.png
 !public/og-image.png
+!public/favicon-*.png
+!public/pwa-*.png
+!public/apple-touch-icon.png
