--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/coverage-v8": "^4.0.18",
     "autoprefixer": "^10.4.21",
     "husky": "^9.1.7",
     "jsdom": "^28.1.0",
