--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.4.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^22.15.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.2.3",
